# labs

./: .gitignore  README.md
Julian/: .gitignore  README.md
Julian/cam_latas/code/: CMakeLists.txt
Julian/cam_latas/code/main/: CMakeLists.txt  can_detect_model_data.cc  can_detect_model_data.h  detection_responder.cc  detection_responder.h  esp_cli.c  esp_cli.h  esp_main.h  main.cc  main_functions.cc  model_settings.cc  model_settings.h
Julian/dataset/: README.md
Julian/training/: train_can_detector.py
Lab_1/Ejercicio_1/: README.md
Lab_1/Ejercicio_1/main/: hello_world_main.c
Lab_1/Ejercicio_2/: README.md  convert.py
Lab_1/Ejercicio_2/code/: CMakeLists.txt  link.txt
Lab_1/Ejercicio_2/main/: ejercicio_2.c
Lab_1/Ejercicio_3/: CMakeLists.txt  README.md  ejercicio_3.c  sdkconfig.defaults
Lab_1/Ejercicio_3/main/: main.c
Lab_1/Ejercicio_4/: CMakeLists.txt  README.md
Lab_1/Ejercicio_4/code/: sdkconfig  sdkconfig.old
Lab_1/Ejercicio_4/main/: CMakeLists.txt  main.c
Lab_1/Ejercicio_5/: README.md  video.txt
Lab_1/Ejercicio_6/: CMakeLists.txt  README.md
Lab_1/Ejercicio_6/CameraWebServer/: CameraWebServer.ino
Lab_1/Ejercicio_6/main/: CMakeLists.txt  ejercicio_6.c
Lab_1/Ejercicio_7/: README.md  link.txt
Lab_1/Ejercicio_7/code/: fotos_hex.txt  sdkconfig
Lab_1/Ejercicio_7/main/: take_picture.c
Lab_1/Ejercicio_8/: README.md
Lab_1/Ejercicio_8/code/: sdkconfig
Lab_1/Ejercicio_8/main/: take_picture.c
Lab_2/: README.md
Lab_2/Ejercicio_1/: CMakeLists.txt  README.md
Lab_2/Ejercicio_1/main/: CMakeLists.txt  index_html.h  main.c
Lab_2/Ejercicio_2/: README.md
Lab_2/Ejercicio_2/code/: process_image.py
Lab_2/Ejercicio_4/: README.md
Lab_2/Ejercicio_4/code/: sdkconfig
Lab_3/: README.md  julian.txt
Lab_3/Ejercicio_1/code/: sdkconfig
Lab_3/Ejercicio_1/main/: CMakeLists.txt
Lab_3/Ejercicio_2/: image1
Lab_3/Ejercicio_2/code/: sdkconfig
Lab_3/Ejercicio_2/images/: beatrice.txt  convert_raw.py  image0  (+2 more)
Lab_3/Ejercicio_3/: README.md
Lab_3/Ejercicio_4/: README.md
Proyecto/: README.md
Proyecto/audio_motores/: README.md
Proyecto/cam_identificador/code/main/: CMakeLists.txt  app_camera_esp.c  app_camera_esp.h  detection_responder.cc  detection_responder.h  esp_main.h  identifier_detect_model_data.cc  identifier_detect_model_data.h  idf_component.yml  main_functions.cc  model_settings.cc  model_settings.h
Proyecto/dataset_capture/: README.md  capture_dataset.py  convert_labels_to_classes.py  requirements.txt
Proyecto/docs/: cumplimiento_restricciones.md  protocolo_telemetria.md
Proyecto/habilitacion_dummy/: README.md
Proyecto/scripts/: wsl_build_all.sh  wsl_check_env.sh
Proyecto/training/: .gitignore  README.md  inspect_dataset.py  requirements.txt  train_identifier.py  train_identifier_full.py
(+75 files in other folders)
